Link styling, PDF button takes up too much space bugfix

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 html {
     box-sizing: border-box;
 }
+
 *,
 *:before,
 *:after {
@@ -17,16 +18,27 @@ body {
     min-width: 350px;
     display: flex;
     flex-direction: column;
-    font-family:
-        system-ui,
-        -apple-system,
-        BlinkMacSystemFont,
-        'Helvetica Neue',
-        Roboto,
-        'Open Sans',
-        'Segoe UI',
-        Ubuntu,
-        Oxygen,
-        Cantarell,
-        sans-serif;
+    font-family: system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+}
+
+.link {
+    color: #007aff;
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
+.description {
+    color: rgba(0, 0, 0, 0.48);
 }
