--- a/components/Projects.module.css
+++ b/components/Projects.module.css
@@ -15,95 +15,3 @@
         opacity: 1;
     }
 }
-
-.previewContainer {
-    width: 100%;
-
-    border-radius: 24px;
-
-    margin-top: 2rem;
-    padding-bottom: 1rem;
-}
-
-@media (min-width: 640px) {
-    .previewContainer {
-        width: 48%;
-    }
-}
-
-@media (min-width: 1024px) {
-    .previewContainer {
-        width: 32%;
-    }
-}
-
-.preview {
-    position: relative;
-    aspect-ratio: 9 / 19.5;
-
-    width: 100%;
-
-    /* background-color: black; */
-    border-top-left-radius: 24px;
-    border-top-right-radius: 24px;
-    overflow: hidden;
-    box-sizing: border-box;
-}
-
-.link {
-    color: #0d6bcd;
-    font-weight: 600;
-}
-
-.enlarge {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    -webkit-transition-property: box-shadow, transform, background-color;
-    transition-property: box-shadow, transform, background-color;
-}
-
-.enlarge:hover {
-    background-color: white;
-
-    --shadow-color: 0deg 0% 63%;
-    box-shadow:
-        0px 1px 1.1px hsl(var(--shadow-color) / 0.36),
-        0.1px 3.3px 3.7px -0.8px hsl(var(--shadow-color) / 0.36),
-        0.2px 8.2px 9.2px -1.7px hsl(var(--shadow-color) / 0.36),
-        0.4px 20px 22.5px -2.5px hsl(var(--shadow-color) / 0.36);
-    -webkit-transform: scale(1.02);
-    transform: scale(1.02);
-}
-
-.description {
-    transition-property: background-color;
-}
-
-.bgTransition {
-    transition-property: background-color, box-shadow;
-    transition-timing-function: ease-in-out;
-    transition-duration: 100ms;
-}
-
-.bgNav {
-    background-color: #e4e3e2;
-}
-
-.langButton:hover {
-    background-color: #f7f7f7;
-}
-
-.selectedButton {
-    background-color: rgba(247, 247, 247, 0.7);
-    --shadow-color: 30deg 2% 54%;
-    box-shadow:
-        0px 1px 1.2px hsl(var(--shadow-color) / 0.29),
-        0px 1.7px 2px -1px hsl(var(--shadow-color) / 0.34),
-        0px 4.1px 4.9px -2px hsl(var(--shadow-color) / 0.39);
-}
